# Tidings

Website/: pyproject.toml
Website/Website/: settings.py  urls.py
Website/core/: models.py
Website/core/migrations/: 0001_initial.py
Website/directory/: models.py
Website/news/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Website/news/migrations/: 0001_initial.py  0002_alter_news_header.py  0002_news_author.py  0003_alter_news_options_news_is_draft.py  0004_deletednews_remove_news_author.py
Website/news/templates/news/: index.html
Website/static/: style.css
Website/templates/: base.html  sidebar.html
Website/templates/news/: create.html  detail.html  index.html
Website/templates/weather/: index.html
Website/weather/: urls.py  views.py
