[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Tatiana <tanyapilipshanova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
automium-web = "^0.1.1"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
